Finich r313684.

Convert linux_recv(), linux_send() and linux_accept() system call arguments
to the register_t type too.

PR:		217161
MFC after:	3 days
xMFC with:	r313284,r313285,r313684

Former-commit-id: 25d45a812abdf508ad09d1fb8f5e60835025a526